--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,5 @@ main: hugu1026.com.github.phantasystatus.PhantasyStatus
 commands:
   st:
     description: "Open Status Setting Gui."
+  myst:
+    description: "Show your status."
