[add]魔法の個数上限を開放するコマンド追加

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,3 +6,5 @@ commands:
     description: "Open Status Setting Gui."
   myst:
     description: "Show your status."
+  setmagiclimit:
+    descriptinon: "Set player's magic limit."
